Closed Bug 480942 Opened 15 years ago Closed 15 years ago

Cannot Set Unix Mailspool Account As Default

Categories

(MailNews Core :: Movemail, defect)

All
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0rc1

People

(Reporter: budman85, Assigned: mkmelin)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.6) Gecko/2009011912 Firefox/3.0.6
Build Identifier: version 2.0.0.19 (20081209)

The 'Set As Default' is deactivated under the Account Properties.


Reproducible: Always

Steps to Reproduce:
1. Create a Unix Mailspool (Movemail) Account
2. Go to Account Properties

Actual Results:  
Automatically grayed - disabled.

Expected Results:  
Cannot set the account as default.

Allow it to be the default account.
Component: Preferences → Movemail
Product: Thunderbird → MailNews Core
QA Contact: preferences → movemail
Confirming on trunk. Should be an easy fix, just need to override GetCanBeDefaultServer.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: unspecified → Trunk
Attached patch proposed fixSplinter Review
What Joshua wrote :)
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #405646 - Flags: superreview?(neil)
Attachment #405646 - Flags: review?(Pidgeot18)
Hardware: x86 → All
Target Milestone: --- → Thunderbird 3.0rc1
Attachment #405646 - Flags: superreview?(neil) → superreview+
Attachment #405646 - Flags: review?(Pidgeot18) → review+
Comment on attachment 405646 [details] [diff] [review]
proposed fix

Approving for tb3. Only affects movemail accounts, and there i can't see it causing regressions.
Attachment #405646 - Flags: approval-thunderbird3+
changeset:   4107:58cc2c9ac03f
http://hg.mozilla.org/comm-central/rev/58cc2c9ac03f

->FIXED
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: