Bug 480942: Cannot Set Unix Mailspool Account As Default. r=jcranmer, sr=neil, a-tb3=mkmelin