mailnews/local/src/nsMovemailIncomingServer.h
@@ -57,10 +57,11 @@ public:
 
     nsMovemailIncomingServer();
     virtual ~nsMovemailIncomingServer();
-    
+
     NS_IMETHOD GetIsSecureServer(PRBool *aIsSecureServer);
     NS_IMETHOD PerformBiff(nsIMsgWindow *aMsgWindow);
     NS_IMETHOD GetDownloadMessagesAtStartup(PRBool *getMessages);
+    NS_IMETHOD GetCanBeDefaultServer(PRBool *canBeDefaultServer);
     NS_IMETHOD GetCanSearchMessages(PRBool *canSearchMessages);
     NS_IMETHOD GetServerRequiresPasswordForBiff(PRBool *aServerRequiresPasswordForBiff);
     NS_IMETHOD GetAccountManagerChrome(nsAString& aResult);
